assets/sass/generic/_base.scss
* {
  &,
  &:before,
  &:after {
    @if ($body-border-box) {
      box-sizing: border-box;
    }
  }
}

html,
body {
  background-color: $body-background;
  color: $body-font-colour;
  font-family: $body-font-family;
  font-size: $global-font-size;
  line-height: $global-lineheight;
}

body {
  padding: 4em 0;

  &.content-active {
    .content {
      filter: blur(6px);

      &:after {
        opacity: 1;
        pointer-events: auto;
        visibility: visible;
      }
    }
  }

  &.is-loading {
    .header,
    .tile {
      animation: none;
      transition: none;
    }
  }
}

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

